[fixes #12599817] Faculty can set the visibility of the course

--- a/static-files/css/style.css
+++ b/static-files/css/style.css
@@ -76,8 +76,12 @@ h1 {
     background: white url(../images/nav-bg.gif) bottom repeat-x;
     padding: 3px 5px;
     color: black;
+    margin-top: 3px;
     border: 1px solid #bbb;
     border-color: #ddd #aaa #aaa #ddd;
+    text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
 }
 
 .button:active, input[type=submit]:active, input[type=button]:active {
@@ -162,6 +166,14 @@ ul.nav.logged_out,.userbox{background:#f5f5f5;filter:progid:DXImageTransform.Mic
     border-bottom-color:#eee;
 }
 
+#course {
+    padding-top: 10px;
+}
+
+.course-sub-info {
+    font-size: 1.1em;
+}
+
 h1.course-title {
     margin-bottom: 0.3em;
     font-size: 2.5em;
@@ -186,4 +198,13 @@ h1.course-title {
 
 #course-list .course-instructor {
     text-align: right;
+}
+
+#course-admin-tools form li {
+    list-style: none;
+    display: inline;
+}
+
+#course-admin-tools form li label{
+    font-weight: normal;
 }
